--- a/Paul_Lorena_Lab2/MainWindow.xaml
+++ b/Paul_Lorena_Lab2/MainWindow.xaml
@@ -1,12 +1,69 @@
-﻿<Window x:Class="Paul_Lorena_Lab2.MainWindow"
+﻿<Window x:Name="frmMain" x:Class="Paul_Lorena_Lab2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Paul_Lorena_Lab2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+        Title="Pizzeria Colosseo" Height="496" Width="760" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
+    <Grid Margin="0,0,10,0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Label x:Name="lblTitle" Content="Pizza - Bake and Sale" FontWeight="Bold" FontSize="24" Margin="208,10,290,431"/>
+        <GroupBox x:Name="bgPizza" Header="Pizza Type" FontWeight="Bold" RenderTransformOrigin="0.504,0.471" Margin="41,77,25,0" Height="131" VerticalAlignment="Top">
+            <Canvas Margin="-17,1,0,-17" HorizontalAlignment="Left" Width="693" RenderTransformOrigin="0.635,0.399">
+                <Canvas.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="0.203"/>
+                        <TranslateTransform X="0.039" Y="0.325"/>
+                    </TransformGroup>
+                </Canvas.RenderTransform>
+                <TextBox x:Name="txtPepperoniPizza" Margin="136,0,0,0" Text="0" TextWrapping="Wrap" Width="83" IsReadOnly="True" TextAlignment="Right" Height="20" RenderTransformOrigin="1.945,-2.591" Canvas.Left="23" Canvas.Top="16"/>
+                <Label x:Name="lblPepperoniPizza" Content="Pepperoni Pizza" Canvas.Left="31" Canvas.Top="10" FontWeight="Normal"/>
+                <Label x:Name="lblMargheritaPizza" Content="Margherita Pizza" Canvas.Left="29" Canvas.Top="61" FontWeight="Normal" RenderTransformOrigin="-2.942,1.034"/>
+                <TextBox x:Name="txtMargheritaPizza" Canvas.Left="155" Canvas.Top="70" Text="0" TextWrapping="Wrap" Width="82" TextAlignment="Right" IsReadOnly="True" RenderTransformOrigin="0.203,2.364"/>
+                <Label x:Name="lblVeggiePizza" Content="Veggie Pizza" Margin="283,0,0,0" Height="30" Canvas.Left="17" Canvas.Top="61" FontWeight="Normal"/>
+                <TextBox x:Name="txtVeggiePizza" Margin="290,0,0,0" Text="0" TextWrapping="Wrap" Width="82" Canvas.Left="108" Canvas.Top="65" TextAlignment="Right"/>
+                <Label x:Name="lblQuatroPizza" Content="Quattro Stagioni Pizza" Margin="527,0,0,0" Canvas.Left="-269" Canvas.Top="8" FontWeight="Normal"/>
+                <TextBox x:Name="txtQuatroPizza" Grid.Column="2" Margin="466,133,0,0" Text="0" TextWrapping="Wrap" Width="82" Canvas.Left="-69" Canvas.Top="-119" TextAlignment="Right" IsReadOnly="True"/>
+                <Label x:Name="lblCanibalePizza" Content="Canibale Pizza" Grid.Column="2" Margin="511,86,0,0" Canvas.Left="-4" Canvas.Top="-75" FontWeight="Normal" RenderTransformOrigin="-0.143,0.644" Width="126"/>
+                <TextBox x:Name="txtCanibalePizza" Canvas.Left="598" Canvas.Top="16" Text="0" TextWrapping="Wrap" Width="80" TextAlignment="Right" IsReadOnly="True"/>
+            </Canvas>
+        </GroupBox>
+        <GroupBox x:Name="gbSale" Header="Current Sale" Margin="34,272,25,10" FontWeight="Bold">
+            <Canvas Height="169" VerticalAlignment="Top" Margin="0,0,-12,0">
+                <Label x:Name="lblQuantity" Content="Quantity" Canvas.Left="23" Canvas.Top="22" FontWeight="Normal"/>
+                <TextBox x:Name="txtQuatity" Canvas.Left="98" Canvas.Top="26" Text="0" TextWrapping="Wrap" Width="74" TextAlignment="Right"/>
+                <Label x:Name="lblType" Content="Type" Canvas.Left="237" Canvas.Top="22" FontWeight="Normal"/>
+                <ComboBox x:Name="cmbType" Canvas.Left="277" Canvas.Top="25" Width="168" Height="20"/>
+                <Label x:Name="lblPrice" Content="Price" Canvas.Left="508" Canvas.Top="22" FontWeight="Normal"/>
+                <TextBox x:Name="txtPrice" Canvas.Left="566" Canvas.Top="27" Text="0" TextWrapping="Wrap" Width="90" TextAlignment="Right" IsReadOnly="True"/>
+                <ListBox x:Name="lstSale" Height="78" Width="520" Canvas.Left="24" Canvas.Top="63"/>
+                <Label x:Name="lblTotal" Content="Total" Canvas.Left="430" Canvas.Top="141" FontWeight="Bold" Width="96" RenderTransformOrigin="0.966,-0.68"/>
+                <TextBox x:Name="txtTotal" Canvas.Left="477" Canvas.Top="146" Text="0" TextWrapping="Wrap" Width="67" TextAlignment="Right" IsReadOnly="True" RenderTransformOrigin="-0.882,0.466" Height="18"/>
+                <Button x:Name="btnAddToSale" Content="Add To Sale" Canvas.Left="582" Canvas.Top="63" FontWeight="Normal" Height="21" Width="82"/>
+                <Button x:Name="btnRemoveItem" Content="Remove Item" Canvas.Left="582" Canvas.Top="92" FontWeight="Normal" Width="82"/>
+                <Button x:Name="btnCheckOut" Content="Check Out" Canvas.Left="582" Canvas.Top="127" Height="34" Width="82"/>
+            </Canvas>
+        </GroupBox>
+        <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="19" VerticalAlignment="Top"
+Width="81">
+            <MenuItem Header="File">
+                <MenuItem Header="Exit"/>
+            </MenuItem>
+            <MenuItem Header="Pizza">
+                <MenuItem Header="Make">
+                    <MenuItem x:Name="margPizzaMenuItem" Header="Margherita Pizza"/>
+                    <MenuItem x:Name="pepPizzaMenuItem" Header="Pepperoni Pizza"/>
+                    <MenuItem x:Name="vegPizzaMenuItem" Header="Veggie Pizza"/>
+                    <MenuItem x:Name="quatPizzaMenuItem" Header="Quattro Stagioni Pizza"/>
+                    <MenuItem x:Name="canPizzaMenuItem" Header="Canibale Pizza"/>
+                </MenuItem>
+                <MenuItem Header="Stop"/>
+            </MenuItem>
+        </Menu>
     </Grid>
 </Window>
